# project-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
paper/: README.md
paper/latex/: main.tex  references.bib
