[project]
authors = [{ name = "Geoff Boeing", email = "boeing@usc.edu" }]
dependencies = [
    "jupyterlab",
    "osmnx==2.0.*",
    "pre-commit",
]
description = "Template for rapidly starting new projects that include data, code, and a LaTeX paper. "
license = "MIT"
license-files = ["LICENSE.txt"]
name = "osmnx-examples"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.0"

[tool.ruff]
cache-dir = "~/.cache/pre-commit/ruff"
line-length = 100

[tool.ruff.lint]
extend-ignore = ["T201"]
extend-select = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-line-length = 110 # line length + 10% since it isn't a hard upper bound

[tool.uv]
required-version = "==0.7.12"
